# Agents-Memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md  index.md  llms.txt  pyproject.toml  requirements.txt
.github/: FUNDING.yml  copilot-instructions.md
agents_memory/: __init__.py  app.py  cli.py  constants.py  logging_utils.py  mcp_app.py  runtime.py
agents_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: .env.example  docker-compose.yml
docs/: README.md  ai-engineering-operating-system.md  architecture-analysis.md  architecture.md  commands.md  copilot-auto-activation.md  foundation-hardening.md  frontend-ui-design.md  getting-started.md  integration.md  model-selection.md  modular-architecture.md  ops.md  release-checklist.md  stale-cleanup.md
errors/: 2026-03-26-other-001.md  2026-03-26-other-002.md  2026-03-26-other-003.md  2026-03-26-spec2flow-001.md  2026-03-26-synapse-001.md  2026-03-26-synapse-002.md  2026-03-26-synapse-network-001.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
memory/: projects.md  rules.md
profiles/: agent-runtime.yaml  frontend-app.yaml  fullstack-product.yaml  python-service.yaml
schema/: error-record.md
scripts/: amem  backfill_wiki_metadata.py  gen-synapse-wiki.sh  index.md  install-cli.sh  install-models.sh  (+8 more)
(+421 files in other folders)
